--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ email-validator==2.2.0
 fastapi==0.111.0
 fastapi-cli==0.0.7
 h11==0.16.0
-httpcore==1.0.7
+httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
@@ -56,5 +56,6 @@ typing-extensions==4.12.2
 ujson==5.10.0
 uvicorn==0.34.0
 uvloop==0.21.0; sys_platform != 'win32'
+winloop
 watchfiles==1.0.4
 websockets==14.1
